Update namemsg to convention
Change-Id: If6859749062b6a55e42ef1ca6cb98ed1859266a3

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,6 +2,6 @@
 	"@metadata": {
 		"authors": [ "..." ]
 	},
-	"skinname-example": "Example",
+	"example-skinname": "Example",
 	"example-desc": "An example skin showcasing the best practices"
 }
