--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -2,6 +2,6 @@
 	"@metadata": {
 		"authors": [ "..." ]
 	},
-	"skinname-example": "{{optional}}",
+	"example-skinname": "{{name}}",
 	"example-desc": "{{desc|what=skin|name=Example|url=https://www.mediawiki.org/wiki/Skin:Example}}"
 }
