Revert "Update namemsg to convention"
My bad... skinname-<skinname> is used in core to get the skin name.

This reverts commit e27edf636d68351427b684feea7dc2e5955bf8a1.

Change-Id: Ia2e0578db51e90572ae602a6db9b14de0b8c0d32

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,6 +2,6 @@
 	"@metadata": {
 		"authors": [ "..." ]
 	},
-	"example-skinname": "Example",
+	"skinname-example": "Example",
 	"example-desc": "An example skin showcasing the best practices"
 }
