Fix display of description on Special:Version
Change-Id: I002643599218c0e8951d5b8e0125a0ac01c65f26

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,6 +5,6 @@
 		]
 	},
 	"skinname-example": "Example",
-	"example-desc": "An example skin showcasing the best practices",
+	"example-skin-desc": "An example skin showcasing the best practices",
 	"example-no-categories": "No categories"
 }
