--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -5,6 +5,6 @@
 		]
 	},
 	"skinname-example": "{{optional}}",
-	"example-desc": "{{desc|what=skin|name=Example|url=https://www.mediawiki.org/wiki/Skin:Example}}",
+	"example-skin-desc": "{{desc|what=skin|name=Example|url=https://www.mediawiki.org/wiki/Skin:Example}}",
 	"example-no-categories": "Message to show when no categories available"
 }
