Example skinをforkしてKagaga-skin用に記述を変更

--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+# Kagaga-skin
+
+This skin is developing for "[Kagaga](https://kagaga.jp)" project in Kaga-city Japan.
+
+And this skin forked from [Example skin](https://github.com/wikimedia/mediawiki-skins-Example) , original message is bellow.
+
+---
+
 Example skin
 
 This is an example skin showcasing the best practices, a companion to the
