--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,10 +1,10 @@
 {
 	"@metadata": {
 		"authors": [
-			"..."
+			"Masayuki Kobayashi"
 		]
 	},
-	"skinname-example": "Example",
-	"example-desc": "An example skin showcasing the best practices",
-	"example-no-categories": "No categories"
+	"kagaga-specialversion-name": "Kagaga-skin",
+	"kagaga-skin-desc": "Skin for \"Kagaga\" project",
+	"kagaga-skin-categories": "No categories"
 }
